2010-06-24  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix track number/count missing when writing to
	  AAC files.

	  (thanks Montel and Tim-Philipp, fixes #17291)

2010-06-16  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix progress bar oddities, crash in TaskQueue and
	  duplicate mp3 entry in desktop file.
	  (Thanks Michael, closes #17269, #17268 and #17266)

	  release 1.5.3 (1.5.2 was broken)

2010-06-13  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix typo preventing SoundConverter to run.
	  (thanks logicaldash & mpmic, fixes #17244)

	  release 1.5.1

2010-05-18  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Faster TypeFinder.
	  Reduce memory usage.
	  (61.9s -> 2.8s, 45.5MB -> 37.8MB to load 2918 files)
	  Fix missing "year" tag. (closes #16425)
	  Code cleaning.

	  release 1.5.0

2010-03-17  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Improve command line parser so gstreamer options
	  are working.

2010-03-11  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: New command line parser.
	  (thanks Marco)

2010-03-02  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: New Asynchronous core.
	  Wav sample width setting.
	  Flac compression setting.

	  release 1.5.0-alpha1

2010-02-10  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Add realaudio to mime whitelist.
	  Fixed tagreader stall when adding unrecognized files.

2009-12-14  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Add missing quoting when using destination
	  folder.

2009-11-09  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix hanging when trying to load DXR files.
	  (thanks Nastrafireblaze, fix lp:479420)

2009-10-03  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Remember the last used folder when adding
	  files/folders.
	  (thanks szpak, add #4807)
